lab9/tests/bad/prototype_type_mismatch.al
int sum(int x, boolean b[]);

int sum(void s, boolean a[])
begin
  
end